--- a/.github/workflows/编译固件（immortalwrt）.yml
+++ b/.github/workflows/编译固件（immortalwrt）.yml
@@ -144,10 +144,10 @@ jobs:
       env:
         WHOAMI: deng
         OPENWRT_ARMVIRT: openwrt-armvirt/*.tar.gz
-        PACKAGE_SOC: s905d
+        PACKAGE_SOC: e52c
        # KERNEL_AUTO_LATEST: false
        # KERNEL_REPO_URL: https://github.com/ophub/kernel/tree/main/pub/stable
-        KERNEL_VERSION_NAME: 5.4.225
+        KERNEL_VERSION_NAME: 6.6.y
 
     - name: 发布固件
       uses: ncipollo/release-action@v1
