--- a/.github/workflows/编译固件（immortalwrt）.yml
+++ b/.github/workflows/编译固件（immortalwrt）.yml
@@ -59,7 +59,7 @@ jobs:
         sudo -E apt -y purge azure-cli* docker* ghc* zulu* llvm* firefox google* dotnet* powershell* openjdk* mysql* php* mongodb* dotnet* snap*
         sudo -E apt -y autoremove --purge
         sudo -E apt clean
-        docker rmi $(docker images -q)
+        docker rmi $(docker images -q) 2>/dev/null || true
         sudo -E timedatectl set-timezone "$TZ"
         sudo -E mkdir -p /workdir
         sudo -E chown $USER:$USER /workdir
