--- a/.github/workflows/编译固件（immortalwrt）.yml
+++ b/.github/workflows/编译固件（immortalwrt）.yml
@@ -12,8 +12,7 @@ env:
   #REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: .config-imm
-  DIY_P1_SH: diy-part1.sh
-  DIY_P2_SH: diy-part2-imm.sh
+  DIY_SH: diy-part2-imm.sh
   TZ: Asia/Shanghai
 
 jobs:
@@ -94,9 +93,9 @@ jobs:
       run: |
         [ -e files ] && mv files openwrt/files
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
-        chmod +x $DIY_P2_SH
+        chmod +x $DIY_SH
         cd openwrt
-        $GITHUB_WORKSPACE/$DIY_P2_SH
+        $GITHUB_WORKSPACE/$DIY_SH
 
     - name: 下载软件包
       id: package
