--- a/.github/workflows/编译固件（immortalwrt）.yml
+++ b/.github/workflows/编译固件（immortalwrt）.yml
@@ -9,10 +9,8 @@ on:
 
 env:
   REPO_URL: https://github.com/immortalwrt/immortalwrt
-  #REPO_BRANCH: master
-  FEEDS_CONF: feeds.conf.default
+  REPO_BRANCH: openwrt-24.10
   CONFIG_FILE: .config-imm
-  DIY_SH: diy.sh
   TZ: Asia/Shanghai
 
 jobs:
@@ -78,11 +76,10 @@ jobs:
 
     - name: 加载自定义feeds
       run: |
-        [ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
-        chmod +x $DIY_P1_SH
         cd openwrt
-        $GITHUB_WORKSPACE/$DIY_P1_SH
-
+        chmod +x $GITHUB_WORKSPACE/diy-feeds.sh
+        $GITHUB_WORKSPACE/diy-feeds.sh
+        
     - name: 更新feeds
       run: cd openwrt && ./scripts/feeds update -a
 
@@ -92,10 +89,10 @@ jobs:
     - name: 加载自定义配置
       run: |
         [ -e files ] && mv files openwrt/files
-        [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
-        chmod +x $DIY_SH
+        [ -e $CONFIG_FILE ] && cp -f $CONFIG_FILE openwrt/.config
         cd openwrt
-        $GITHUB_WORKSPACE/$DIY_SH
+        chmod +x $GITHUB_WORKSPACE/diy-config.sh
+        $GITHUB_WORKSPACE/diy-config.sh
 
     - name: 下载软件包
       id: package
@@ -109,6 +106,13 @@ jobs:
     - name: 编译固件
       id: compile
       run: |
+        ulimit -u unlimited
+        ulimit -n unlimited
+        ulimit -d unlimited
+        ulimit -m unlimited
+        ulimit -s unlimited
+        ulimit -t unlimited
+        ulimit -v unlimited
         cd openwrt
         echo -e "$(nproc) thread compile"
         make -j$(nproc) || make -j1 || make -j1 V=s
@@ -140,5 +144,5 @@ jobs:
         allowUpdates: true
         token: ${{ secrets.GITHUB_TOKEN }}
         body: |
-          使用 https://github.com/immortalwrt/immortalwrt 源码编译
+          使用https://github.com/immortalwrt/immortalwrt源码编译
           
