--- a/.github/workflows/编译固件（immortalwrt）.yml
+++ b/.github/workflows/编译固件（immortalwrt）.yml
@@ -101,12 +101,12 @@ jobs:
       - name: 复制 armsr 根文件系统到打包目录
         run: |
           mkdir -p openwrt-armvirt
-          cp openwrt/bin/targets/armsr/armv8/openwrt-armsr-armv8-generic-rootfs.tar.gz openwrt-armvirt/
+          cp immortalwrt/bin/targets/armsr/armv8/openwrt-armsr-armv8-generic-rootfs.tar.gz openwrt-armvirt/
     
       - name: 打包内核
         uses: unifreq/openwrt_packit@master
         env:
-          WHOAMI: deng
+          WHOAMI: admin
           OPENWRT_ARMVIRT: openwrt-armvirt/*.tar.gz
           PACKAGE_SOC: e52c
           KERNEL_AUTO_LATEST: true
