--- a/.github/workflows/编译固件（immortalwrt）.yml
+++ b/.github/workflows/编译固件（immortalwrt）.yml
@@ -91,6 +91,14 @@ jobs:
           find dl -size -1024c -exec ls -l {} \;
           find dl -size -1024c -exec rm -f {} \;
 
+      - name: 编译前上传配置 (Upload config before build)
+        uses: actions/upload-artifact@v4
+        with:
+          name: config-before-build
+          path: |
+            immortalwrt/feeds.conf.default
+            immortalwrt/.config
+
       - name: 多线程编译 immortalwrt (Build immortalwrt multithreading)
         if: ${{inputs.multithreading == true}}
         working-directory: immortalwrt
