--- a/.github/workflows/编译固件（immortalwrt）.yml
+++ b/.github/workflows/编译固件（immortalwrt）.yml
@@ -106,8 +106,8 @@ jobs:
         with:
           name: config-before-build
           path: |
-            immortalwrt/feeds.conf.default
-            immortalwrt/.config
+            - immortalwrt/feeds.conf.default
+            - immortalwrt/.config
 
       - name: 多线程编译 immortalwrt (Build immortalwrt multithreading)
         if: ${{inputs.multithreading == true}}
