--- a/.github/workflows/编译固件（immortalwrt）.yml
+++ b/.github/workflows/编译固件（immortalwrt）.yml
@@ -38,6 +38,38 @@ jobs:
           echo "硬盘详情："
           df -Th
 
+      - name: Optimize Disk Space
+        uses: hugoalh/disk-space-optimizer-ghaction@main
+        with:
+          operate_sudo: true
+          general_include: ".+"
+          general_exclude: |-
+            ^GCC$
+            ^G\+\+$
+            Clang
+            LLVM
+          docker_include: ".+"
+          docker_prune: true
+          docker_clean: true
+          apt_prune: true
+          apt_clean: true
+          homebrew_prune: true
+          homebrew_clean: true
+          npm_prune: true
+          npm_clean: true
+          os_swap: true
+
+      - name: Maximize Build Space
+        uses: easimon/maximize-build-space@master
+        with:
+          root-reserve-mb: 3072
+          swap-size-mb: 1
+          remove-dotnet: true
+          remove-android: true
+          remove-haskell: true
+          remove-codeql: true
+          remove-docker-images: true
+          
       - name: 下载编译所需的依赖 (Install the software packages required for compilation)
         env:
           DEBIAN_FRONTEND: noninteractive
@@ -50,13 +82,13 @@ jobs:
           sudo -E apt -y autoremove --purge
           sudo -E apt clean
           docker rmi $(docker images -q) 2>/dev/null || true
-          sudo -E timedatectl set-timezone "Asia/Shanghai"
+          sudo -E timedatectl set-timezone "Asia/Shanghai"         
 
       - name: 克隆当前仓库 (Clone current repo)
-        uses: actions/checkout@v4
+        uses: actions/checkout@main
 
       - name: 克隆 immortalwrt 仓库 (Clone immortalwrt repo)
-        uses: actions/checkout@v4
+        uses: actions/checkout@main
         with:
           repository: immortalwrt/immortalwrt
           ref: openwrt-24.10
@@ -94,7 +126,7 @@ jobs:
           find dl -size -1024c -exec rm -f {} \;
 
       - name: 编译前上传配置 (Upload config before build)
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@main
         with:
           name: config-before-build
           path:
@@ -127,7 +159,7 @@ jobs:
           KERNEL_VERSION_NAME: 6.1.y
           
       - name: 上传编译结果到 Artifact (Upload build result to Artifact)
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@main
         with:
           name: immortalwrt-build-result
           path: immortalwrt/bin/targets
