--- a/.github/workflows/编译固件（immortalwrt）.yml
+++ b/.github/workflows/编译固件（immortalwrt）.yml
@@ -129,9 +129,9 @@ jobs:
         uses: actions/upload-artifact@main
         with:
           name: config-before-build
-          path:
-            - immortalwrt/feeds.conf.default
-            - immortalwrt/.config
+          path: |
+            immortalwrt/feeds.conf.default
+            immortalwrt/.config
 
       - name: 多线程编译 immortalwrt (Build immortalwrt multithreading)
         if: ${{inputs.multithreading == true}}
