--- a/.github/workflows/编译.yml
+++ b/.github/workflows/编译.yml
@@ -130,8 +130,9 @@ jobs:
         with:
           name: config-before-build
           path: |
-            immortalwrt/.config
             immortalwrt/feeds.conf.default
+            immortalwrt/.config
+          include-hidden-files: true
 
       - name: 多线程编译 immortalwrt (Build immortalwrt multithreading)
         if: ${{inputs.multithreading == true}}
@@ -143,12 +144,15 @@ jobs:
           mkdir -p openwrt-armvirt
           cp immortalwrt/bin/targets/armsr/armv8/immortalwrt-armsr-armv8-generic-rootfs.tar.gz openwrt-armvirt/openwrt-armvirt-64-generic-rootfs.tar.gz
 
+      - name: 列出打包目录内容
+        run: ls -la openwrt-armvirt/
+      
       - name: Test rootfs tar integrity
         run: |
           echo "=== 列出 rootfs.tar.gz 内容（前20行）==="
-          tar -tzf openwrt-armvirt/openwrt-armsr-armv8-generic-rootfs.tar.gz | head -20 || exit 1
+          tar -tzf openwrt-armvirt/openwrt-armvirt-64-generic-rootfs.tar.gz | head -20 || exit 1
           echo "=== 文件大小 ==="
-          du -sh openwrt-armvirt/openwrt-armsr-armv8-generic-rootfs.tar.gz
+          du -sh openwrt-armvirt/openwrt-armvirt-64-generic-rootfs.tar.gz
 
       - name: 打包内核
         uses: unifreq/openwrt_packit@master
