--- a/.github/workflows/编译.yml
+++ b/.github/workflows/编译.yml
@@ -142,24 +142,15 @@ jobs:
       - name: 复制 armsr 根文件系统到打包目录
         run: |
           mkdir -p openwrt-armvirt
-          cp immortalwrt/bin/targets/armsr/armv8/immortalwrt-armsr-armv8-generic-rootfs.tar.gz openwrt-armvirt/openwrt-armvirt-64-generic-rootfs.tar.gz
-
-      - name: 列出打包目录内容
-        run: ls -la openwrt-armvirt/
-      
-      - name: Test rootfs tar integrity
-        run: |
-          echo "=== 列出 rootfs.tar.gz 内容（前20行）==="
-          tar -tzf openwrt-armvirt/openwrt-armvirt-64-generic-rootfs.tar.gz | head -20 || exit 1
-          echo "=== 文件大小 ==="
-          du -sh openwrt-armvirt/openwrt-armvirt-64-generic-rootfs.tar.gz
-
+          cp immortalwrt/bin/targets/armsr/armv8/immortalwrt-armsr-armv8-generic-rootfs.tar.gz openwrt-armvirt/openwrt-armsr-armv8-generic-rootfs.tar.gz
+          
       - name: 打包内核
         uses: unifreq/openwrt_packit@master
         env:
           WHOAMI: admin
-          OPENWRT_ARMVIRT: openwrt-armvirt/*.tar.gz
+          OPENWRT_ARMVIRT: openwrt-armvirt/openwrt-armsr-armv8-generic-rootfs.tar.gz
           PACKAGE_SOC: e52c
+          PLATFORM: armsr
           KERNEL_AUTO_LATEST: true
           KERNEL_REPO_URL: https://github.com/ophub/kernel
           KERNEL_VERSION_NAME: 6.1.y
