--- a/.github/workflows/编译.yml
+++ b/.github/workflows/编译.yml
@@ -146,7 +146,7 @@ jobs:
           PACKAGE_SOC: e52c
           PLATFORM: armsr
           KERNEL_AUTO_LATEST: true
-          KERNEL_REPO_URL: https://github.com/ophub/kernel
+          KERNEL_REPO_URL: ophub/kernel
           KERNEL_VERSION_NAME: 6.1.y
           
       - name: 上传编译结果到 Artifact (Upload build result to Artifact)
